# cathyAI-bots

./: COMMIT_MSG_IDENTITY_PHASE1.txt  COMPLETED_PRS.md  MEMORY_ROADMAP.md  README.md  config.yaml.template  docker-compose.bots.yml  docker-compose.yml  main.py  requirements.txt  setup.sh  setup_git.sh
.amazonq/rules/: dev-standards.md
.github/workflows/: test.yml
cleaner/: Dockerfile  cleaner.py  config.yaml  config.yaml.template  event_main.py  main.py  message_parts.json  messages.py
framework/: Dockerfile  pyproject.toml
framework/catcord_bots/: __init__.py  config.py  formatting.py  invites.py  matrix.py  personality.py  state.py
news/: __init__.py  config.yaml.template  format.py  main.py  state.py
services/: .env.template
services/memory/: Dockerfile  extraction.py  extraction_rules.yaml  main.py
services/online/: Dockerfile  main.py
tests/: test_cleaner.py  test_cleaner_bot.py  test_config.py  test_formatting.py  test_framework.py  test_matrix.py  test_memory_service.py  test_messages.py  test_online_service.py  test_personality.py
